--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="CSS/styles.css">
   
-  
+
 </head>
 <body>
   <div id="header">
@@ -31,14 +31,14 @@
       <!-- Add more list items here if you have more images -->
     </ol>
     <div class="carousel-inner">
-      <div class="carousel-item active" style="background-image: url('https://explainit.app/imgs/carousel1.jpg')">
+      <div class="carousel-item active" style="background-image: url('https://explainit.app/imgs/carousel1.png')">
         <a href="https://explainit.app/quiz.html" class="carousel-link">
         <div class="carousel-caption d-none d-md-block">
           <h5>Quiz</h5>
           <p>Fun Quiz for all the family</p>
         </div>
       </div>
-      <div class="carousel-item" style="background-image: url('https://explainit.app/imgs/carousel2.jpg')">
+      <div class="carousel-item" style="background-image: url('https://explainit.app/imgs/carousel2.png')">
         <a href="https://explainit.app/quiz.html" class="carousel-link">
         <div class="carousel-caption d-none d-md-block">
           <h5>Your Title Here</h5>
