--- a/index.html
+++ b/index.html
@@ -10,10 +10,26 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="CSS/styles.css">
   
+  <style>
+    .custom-header {
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.7);
+    }
+
+    .custom-carousel {
+      border-radius: 10px;
+      margin-top: 30px;
+      margin-bottom: 30px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.7);
+      width: 90%; /* Set the width to 90% */
+      margin-left: auto; /* Center the carousel horizontally */
+      margin-right: auto; /* Center the carousel horizontally */
+    }
+
+  </style>
 
 </head>
 <body>
-  <div id="header">
+  <div id="header" class="custom-header">
     <div class="header-content">
       <!-- Wrap the house icon in an anchor tag -->
       <a href="index.html">
@@ -24,31 +40,33 @@
       <h1>explain it app</h1>
     </div>
   </div> 
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <!-- Add more list items here if you have more images -->
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active" style="background-image: url('https://explainit.app/imgs/carousel1.png')">
-        <a href="https://explainit.app/quiz.html" class="carousel-link">
-        
-      <div class="carousel-item" style="background-image: url('https://explainit.app/imgs/carousel2.png')">
-        <a href="https://explainit.app/quiz.html" class="carousel-link">
-      </div>
-      <!-- Add more divs here if you have more images -->
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-  
+        <!-- carousel -->
+        <div id="carouselExampleIndicators" class="carousel slide custom-carousel" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <!-- Add more list items here if you have more images -->
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active" style="background-image: url('https://explainit.app/imgs/carousel1.png')">
+              <a href="https://explainit.app/quiz.html" class="carousel-link">
+              </a>
+            </div>
+            <div class="carousel-item" style="background-image: url('https://explainit.app/imgs/carousel2.png')">
+              <a href="https://explainit.app/quiz.html" class="carousel-link">
+              </a>
+            </div>
+            <!-- Add more divs here if you have more images -->
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
 
   <div class="container card-container">
 
