--- a/articles.html
+++ b/articles.html
@@ -39,9 +39,7 @@
                 <div class="modal-body" id="articleModalContent">
                     <div class="modal-image-container position-relative">
                         <img src="" class="img-fluid w-100" id="articleModalImage" alt="Article Image">
-                        <div class="modal-image-overlay position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center">
-                            <h2 class="modal-title text-white mb-0" id="articleModalLabel">Article Title</h2>
-                        </div>
+                        <h2 class="modal-title text-white mb-0 position-absolute top-50 start-50 translate-middle" id="articleModalLabel">Article Title</h2>
                     </div>
                     <div class="modal-text-container mt-3">
                         <div class="d-flex justify-content-between">
