--- a/chat.html
+++ b/chat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/styles.css">
-    <title>Quick Answers</title>
+    <title>Chat with an experienced Christian</title>
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
@@ -19,13 +19,13 @@
                     <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
                 </svg>
             </a>
-            <h1>Quick Answers</h1>
+            <h1>Chat with an experienced Christian</h1>
         </div>
     </div>
 <!-- Add the hero area -->
 <div class="hero">
-    <h2>Know how to answer typical questions we're asked when sharing the gospel.
-        Click on a topic to see the questions and then click the questions needed<h2>
+    <h2>Chat with an experienced Christian trained in apologetics and 2000 years of Christian history.
+        <h2>
   </div>
 
 
