--- a/chat.html
+++ b/chat.html
@@ -8,7 +8,12 @@
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    
+    <style> /* chat container used on the chatgpt chat page*/
+        #chat-container {
+          max-height: 300px; /* Set a maximum height for the chat container */
+          overflow-y: auto; /* Enable vertical scrolling */
+        }
+        </style>
 </head>
 <body>
     
