--- a/chat.html
+++ b/chat.html
@@ -50,6 +50,7 @@
                         <div class="alert alert-primary" role="alert">
                             You are a Christian Apologetics Expert.
                         </div>
+                        <div id="loading-indicator" style="display: none;">Loading...</div>
                     </div>
                     <div class="card-footer">
                         <input type="text" class="form-control" placeholder="Type your message..." id="user-message">
