--- a/chat.html
+++ b/chat.html
@@ -63,67 +63,82 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script>
-        $(document).ready(function() {
-            // Function to send a message and update the chat
-            function sendMessage(message) {
-            // Show the loading indicator
-            $("#loading-indicator").show();
+$(document).ready(function() {
+    // Store the chat log
+    var chatLog = [];
 
-            // Prepare the data to be sent in the API request
-            var requestData = {
-                "message": message,
-                "chat_log": null
-            };
+    // Function to send a message and update the chat
+    function sendMessage(message) {
+        // Prepare the data to be sent in the API request
+        var requestData = {
+            "message": message,
+            "chat_log": chatLog
+        };
 
-            // Send the API request
-            $.ajax({
-                url: "https://explainit.app/api/chat.php",
-                type: "POST",
-                data: JSON.stringify(requestData),
-                contentType: "application/json",
-                dataType: "json",
-                success: function(response) {
-                    // Update the chat UI with the response
-                    var assistantMessage = response.answer;
-                    appendMessage("assistant", assistantMessage);
-                },
-                error: function(xhr, status, error) {
-                    console.error(error);
-                    // Display an error message in the chat UI
-                    appendMessage("error", "An error occurred. Please try again later.");
-                },
-                complete: function() {
-                    // Hide the loading indicator when the request is complete
-                    $("#loading-indicator").hide();
-                }
-            });
-        }
+        // Show the loading indicator
+        $("#loading-indicator").show();
 
-            // Function to append a message to the chat UI
-            function appendMessage(role, content) {
-                var messageHtml = "<div class='alert alert-" + role + "' role='alert'>" + content + "</div>";
-                $("#chat-container").append(messageHtml);
-                $("#user-message").val(""); // Clear the input field
+        // Send the API request
+        $.ajax({
+            url: "https://explainit.app/api/chat.php",
+            type: "POST",
+            data: JSON.stringify(requestData),
+            contentType: "application/json",
+            dataType: "json",
+            success: function(response) {
+                // Update the chat UI with the response
+                var assistantMessage = response.answer;
+                appendMessage("user", message);
+                appendMessage("assistant", assistantMessage);
+
+                // Update the chat log
+                chatLog.push({
+                    "role": "user",
+                    "content": message
+                });
+                chatLog.push({
+                    "role": "assistant",
+                    "content": assistantMessage
+                });
+            },
+            error: function(xhr, status, error) {
+                console.error(error);
+                // Display an error message in the chat UI
+                appendMessage("error", "An error occurred. Please try again later.");
+            },
+            complete: function() {
+                // Hide the loading indicator when the request is complete
+                $("#loading-indicator").hide();
             }
-
-            // Send button click event
-            $("#send-btn").on("click", function() {
-                var message = $("#user-message").val();
-                if (message) {
-                    sendMessage(message);
-                }
-            });
-
-            // Handle Enter key press in the input field
-            $("#user-message").on("keypress", function(event) {
-                if (event.which === 13) {
-                    var message = $("#user-message").val();
-                    if (message) {
-                        sendMessage(message);
-                    }
-                }
-            });
         });
+    }
+
+    // Function to append a message to the chat UI
+    function appendMessage(role, content) {
+        var messageHtml = "<div class='alert alert-" + role + "' role='alert'>" + content + "</div>";
+        $("#chat-container").append(messageHtml);
+        $("#user-message").val(""); // Clear the input field
+    }
+
+    // Send button click event
+    $("#send-btn").on("click", function() {
+        var message = $("#user-message").val();
+        if (message) {
+            sendMessage(message);
+        }
+    });
+
+    // Handle Enter key press in the input field
+    $("#user-message").on("keypress", function(event) {
+        if (event.which === 13) {
+            var message = $("#user-message").val();
+            if (message) {
+                sendMessage(message);
+            }
+        }
+    });
+});
+
     </script>
 </body>
 </html>
