--- a/chat.html
+++ b/chat.html
@@ -94,7 +94,7 @@
                     </div>
                     <div class="card-body" id="chat-container">
                         <div class="alert alert-primary" role="alert">
-                            I'm an expereicned Christian and I'm here to help you. Ask me anything!
+                            I'm an experienced Christian and I'm here to help you. Ask me anything!
                         </div>
                     </div>
                     <div class="card-footer">
