--- a/index.html
+++ b/index.html
@@ -121,7 +121,16 @@
           <p class="tile-subtitle">Find useful tips on sharing your faith, like the book of Acts</p>
         </div>
       </a>
-      <a href="accordian.html?category=Quick_Answers" class="tile">
+      <a href="chat.html" class="tile">
+        <span class="tile-icon">&#x1F916;</span>
+        <div>
+          <h3 class="tile-title">AI Chat</h3>
+          <p class="tile-subtitle">Chat with our AI Christian trained in 2,000 years of Christian knowledge</p>
+        </div>
+      </a>
+
+
+      <!-- <a href="accordian.html?category=Quick_Answers" class="tile">
         <span class="tile-icon">&#x1F4D5;</span>
         <div>
           <h3 class="tile-title">Accordian Quick Answers</h3>
@@ -134,7 +143,7 @@
           <h3 class="tile-title">Accordian Conversation Starers</h3>
           <p class="tile-subtitle">Find useful tips on sharing your faith, like the book of Acts</p>
         </div>
-      </a>
+      </a> -->
 
     </div>
   </div>
