--- a/index.html
+++ b/index.html
@@ -50,10 +50,16 @@
           <div class="carousel-inner">
             <div class="carousel-item active" style="background-image: url('https://explainit.app/imgs/carousel1.png')">
               <a href="https://explainit.app/quiz.html" class="carousel-link">
+                <div class="carousel-caption">
+                  <h3>Quick Answers</h3>
+                  <p>Provide quick answers to popular questions we're asked.</p>
+                </div>
               </a>
             </div>
-            <div class="carousel-item" style="background-image: url('https://explainit.app/imgs/carousel2.png')">
+            <div class="carousel-item" style="background-image: url('https://explainit.app/imgs/carousel2.jpg')">
               <a href="https://explainit.app/quiz.html" class="carousel-link">
+                <h3>Fun Educational Quiz</h3>
+                <p>Enjoy these quizes designed to boost our knowledge while having fun</p>
               </a>
             </div>
             <!-- Add more divs here if you have more images -->
