--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <!-- Add more list items here if you have more images -->
           </ol>
           <div class="carousel-inner">
-            <div class="carousel-item active" style="background-image: url('https://explainit.app/imgs/carousel1.png')">
+            <div class="carousel-item active" style="background-image: url('https://explainit.app/imgs/carousel1.jpg')">
               <a href="https://explainit.app/quiz.html" class="carousel-link">
                 <div class="carousel-caption">
                   <h3>Quick Answers</h3>
