--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
             </div>
             <div class="carousel-item" style="background-image: url('https://explainit.app/imgs/carousel2.jpg')">
               <a href="https://explainit.app/quiz.html" class="carousel-link">
+            <div class="carousel-caption">
                 <h3>Fun Educational Quiz</h3>
                 <p>Enjoy these quizes designed to boost our knowledge while having fun</p>
+              </div>
               </a>
             </div>
             <!-- Add more divs here if you have more images -->
