--- a/articles.html
+++ b/articles.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="hero">
-        <h2>Tips on starting a conversation with various types of people<h2>
+        <h2>Enjoy curated AI aenerated articles on a wide range of topics<h2>
     </div>
 
     <div class="container mt-5">
