big rename updated ai4christians

--- a/chat.html
+++ b/chat.html
@@ -126,7 +126,7 @@
 
                 // Send the API request
                 $.ajax({
-                    url: "https://explainit.app/api/chat.php",
+                    url: "https://ai4christians.com/api/chat.php",
                     type: "POST",
                     data: JSON.stringify(requestData),
                     contentType: "application/json",
