--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
             <!-- Add more list items here if you have more images -->
           </ol>
           <div class="carousel-inner">
-            <div class="carousel-item active" style="background-image: url('https://explainit.app/imgs/carousel1.jpg')">
-              <a href="https://explainit.app/quiz.html" class="carousel-link">
+            <div class="carousel-item active" style="background-image: url('https://ai4christians.com/imgs/carousel1.jpg')">
+              <a href="https://ai4christians.com/quiz.html" class="carousel-link">
                 <div class="carousel-caption">
                   <h3>Quick Answers</h3>
                   <p>Provide quick answers to popular questions we're asked.</p>
                 </div>
               </a>
             </div>
-            <div class="carousel-item" style="background-image: url('https://explainit.app/imgs/carousel2.jpg')">
-              <a href="https://explainit.app/quiz.html" class="carousel-link">
+            <div class="carousel-item" style="background-image: url('https://ai4christians.com/imgs/carousel2.jpg')">
+              <a href="https://ai4christians.com/quiz.html" class="carousel-link">
             <div class="carousel-caption">
                 <h3>Fun Educational Quiz</h3>
                 <p>Enjoy these quizes designed to boost our knowledge while having fun</p>
