--- a/articles.html
+++ b/articles.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/lazysizes/lazysizes.min.js" async=""></script>
+
 
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
@@ -179,7 +181,7 @@
                 const cardHtml = `
                 <div class="col-md-4 mb-3">
                     <div class="card h-100" data-article-id="${id}" data-article-content="${encodedContent}" data-article-tags='${JSON.stringify(tags)}' data-bs-toggle="modal" data-bs-target="#articleModal">
-                        <img src="${imageUrl}" class="card-img-top" alt="...">
+                       <img src="placeholder.jpg" data-src="${imageUrl}" class="card-img-top lazyload" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">${title}</h5>
                             <p class="card-text">${content.substring(0, 100)}...</p>
