trying articles title change

--- a/articles.html
+++ b/articles.html
@@ -183,7 +183,7 @@
                     <div class="card h-100" data-article-id="${id}" data-article-content="${encodedContent}" data-article-tags='${JSON.stringify(tags)}' data-bs-toggle="modal" data-bs-target="#articleModal">
                        <img src="placeholder.jpg" data-src="${imageUrl}" class="card-img-top lazyload" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">${title}</h5>
+                            <h5 class="card-title article-title">${title}</h5>
                             <p class="card-text">${content.substring(0, 100)}...</p>
                         </div>
                         <div class="card-footer">
